--- a/examenes-analisis.tex
+++ b/examenes-analisis.tex
@@ -231,7 +231,7 @@ Sánchez
 Alberca}\\ \textsf{asalber@ceu.es} \\ \textsf{https://aprendeconalf.es}}
 \end{tabular}
 \end{flushleft}
-\end{titlepage}\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[boxrule=0pt, interior hidden, enhanced, borderline west={3pt}{0pt}{shadecolor}, sharp corners, frame hidden, breakable]}{\end{tcolorbox}}\fi
+\end{titlepage}\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[interior hidden, boxrule=0pt, breakable, frame hidden, enhanced, borderline west={3pt}{0pt}{shadecolor}, sharp corners]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Tabla de contenidos}
 {
@@ -252,9 +252,9 @@ Ingeniería Matemática.
 
 \bookmarksetup{startatroot}
 
-\hypertarget{examen-de-anuxe1lisis-i-nov-2022}{%
-\chapter{Examen de Análisis I (Nov
-2022)}\label{examen-de-anuxe1lisis-i-nov-2022}}
+\hypertarget{examen-de-anuxe1lisis-i-noviembre-2022}{%
+\chapter{Examen de Análisis I (Noviembre
+2022)}\label{examen-de-anuxe1lisis-i-noviembre-2022}}
 
 \leavevmode\vadjust pre{\hypertarget{exr-1}{}}%
 \begin{exercise}[]\label{exr-1}
@@ -265,7 +265,7 @@ Calcular los puntos de acumulación del conjunto
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Tip}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 Veamos primero que todos los puntos del intervalo \([0,1]\) son puntos
 de acumulación. Sea \(x\in[0,1]\). Entonces para cualquier
@@ -321,7 +321,7 @@ Dada la sucesión \(\left(\frac{1}{2^n}\right)_{n=1}^\infty\),
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 \begin{enumerate}
 \def\labelenumi{\alph{enumi}.}
@@ -362,7 +362,7 @@ tiempo?
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 Veamos que primero que la sucesión es monótona decreciente.
 \(x_1=3>x_n= \sqrt{\frac{3}{2}+3} = 2.12\). Supongamos ahora que
@@ -403,7 +403,7 @@ Demostrar, usando la definición de límite, que
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 Para cualquier \(\varepsilon>0\) existe
 \(\delta=\frac{2}{3}\varepsilon\), tal que si
@@ -432,7 +432,7 @@ siguientes funciones son infinitésimos equivalentes en \(x=0\):
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 Para que dos funciones \(f\) y \(g\) sean infinitésimos equivalentes en
 \(x=0\) se tiene que cumplir que \(\lim_{x\to 0}\frac{f(x)}{g(x)}=1\).
@@ -460,7 +460,7 @@ Determinar las asíntotas de la función
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 El dominio de la función es
 \(\operatorname{Dom}(f) = \mathbb{R}-[-1,0]\) de modo que solo puede
@@ -543,9 +543,9 @@ oblicua de \(f\) en \(-\infty\).
 
 \bookmarksetup{startatroot}
 
-\hypertarget{examen-de-anuxe1lisis-i-dic-2022}{%
-\chapter{Examen de Análisis I (Dic
-2022)}\label{examen-de-anuxe1lisis-i-dic-2022}}
+\hypertarget{examen-de-anuxe1lisis-i-diciembre-2022}{%
+\chapter{Examen de Análisis I (Diciembre
+2022)}\label{examen-de-anuxe1lisis-i-diciembre-2022}}
 
 \hypertarget{primera-parte}{%
 \section{Primera parte}\label{primera-parte}}
@@ -560,7 +560,7 @@ sucesión converge y calcular su límite.
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 El término recurrente de la sucesión puede escribirse de la siguiente
 manera
@@ -641,7 +641,7 @@ los polígonos regulares en triángulos como en el siguiente ejemplo.
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 \begin{enumerate}
 \def\labelenumi{\alph{enumi}.}
@@ -716,7 +716,7 @@ equivalentes en \(x=0\), demostrar que también lo son
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 Como \(\operatorname{sen}(x)\) y \(x\) son infinitésimos equivalentes en
 \(x=0\), se tiene que
@@ -744,7 +744,7 @@ Determinar el dominio y el tipo de asíntotas de la función
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 Para que exista la raíz, el radicando debe ser positivo, es decir,
 \(\frac{x^3}{4x-1}\geq 0\). Es fácil ver que
@@ -812,7 +812,7 @@ conjunto cerrado o abierto?
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 \(A\) puede expresarse con la unión de intervalos, ya que
 \(x^2-1\geq 0 \Leftrightarrow x^2\geq 1 \Leftrightarrow x\leq -1 \mbox{ o } x\geq 1\),
@@ -850,7 +850,7 @@ Taylor de cuarto grado.
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 Para realizar la aproximación que se pide calcularemos el polinomio de
 Taylor de cuarto grado de la función \(f(x)=\ln(\sqrt{x})\) en el punto
@@ -898,7 +898,7 @@ y clasificar el resto de discontinuidades.
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 Para que la función \(h(x)=\dfrac{x^2-2x+a}{x^3+bx^2-6x}\) tenga una
 discontinuidad evitable en \(x=2\), debe cumplirse que
@@ -966,7 +966,7 @@ envoltorio sea mínimo.
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 El volumen de una esfera de radio \(r\) es \(v_e(r)=\frac{4}{3}\pi r^3\)
 y el de un cilindro de radio \(r\) y altura \(h\) es
@@ -1029,7 +1029,7 @@ más de una raíz en el intervalo \((0,1)\) para cualquier valor de \(k\).
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 \(x^2-2x+\frac{3}{2}>0\) \(\forall x\in\mathbb{R}\), de manera que, para
 que exista la función \(f\), debe ser también \(k>0\) y, por tanto,
@@ -1065,7 +1065,7 @@ la curva implícita \(e^{x^2y}-\ln(\sqrt{x-y})= 0\) en el punto \(x=0\).
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
 
 En primer lugar obtenemos los valores de \(y\) que cumplen la ecuación
 de la curva implícita para \(x=0\). Sustituyendo en la ecuación se tiene
@@ -1095,6 +1095,250 @@ es
 Y la ecuación de la recta normal a la curva en \((0,-e^2)\) es
 
 \[y = y_0 - \frac{1}{\frac{dy}{dx}(x_0,y_0)} (x-x_0) = (-e^2)-1(x-0) = -x-e^2.\]
+
+\end{tcolorbox}
+
+\bookmarksetup{startatroot}
+
+\hypertarget{examen-de-anuxe1lisis-ii-marzo-2023}{%
+\chapter{Examen de Análisis II (Marzo
+2023)}\label{examen-de-anuxe1lisis-ii-marzo-2023}}
+
+\leavevmode\vadjust pre{\hypertarget{exr-1}{}}%
+\begin{exercise}[]\label{exr-1}
+
+Estudiar la convergencia de las siguientes series
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  \(\displaystyle \sum \frac{3n^2+2n}{\sqrt{n^5+n}}\)
+\item
+  \(\displaystyle \sum \cos(n\pi)n^2e^{-n}\)
+\end{enumerate}
+
+\end{exercise}
+
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Tip}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Se trata de una serie de términos positivos en la que el término
+  dominante en el numerador es \(3n^2\) y el término dominante en el
+  denominador es \(n^{5/2}\), por lo que podemos utilizar el
+  \href{https://aprendeconalf.es/analisis-manual/08-series.html\#thm-criterio-cociente}{criterio
+  del cociente} para compararla con las serie
+  \(\sum \frac{3n^2}{n^{5/2}}\).
+
+  \begin{align*}
+   \lim_{n\to\infty} \frac{\frac{3n^2+2n}{\sqrt{n^5+n}}}{\frac{3n^2}{n^{5/2}}} 
+   &= \lim_{n\to\infty} \frac{3n^2+2n}{3n^2} \frac{\sqrt{n^5+n}}{\sqrt{n^5}} 
+   = \lim_{n\to\infty} \frac{3n^2+2n}{3n^2} \lim_{n\to\infty}\frac{\sqrt{n^5+n}}{\sqrt{n^5}} = 1
+   \end{align*}
+
+  Por tanto, la serie \(\sum \frac{3n^2+2n}{\sqrt{n^5+n}}\) tiene el
+  mismo comportamiento que la serie \(\sum \frac{3n^2}{n^{5/2}}\), y
+  como \(\sum \frac{3n^2}{n^{5/2}} = 3\sum \frac{1}{n^{1/2}}\) es una
+  serie \(p\) con \(p<1\), diverge, por lo que la serie
+  \(\sum \frac{3n^2+2n}{\sqrt{n^5+n}}\) también diverge.
+\item
+  Se trata de una serie alternada ya que
+  \(\sum \cos(n\pi)n^2e^{-n} = \sum (-1)nn^2e^{-n}\) por lo que
+  aplicando el
+  \href{https://aprendeconalf.es/analisis-manual/08-series.html\#thm-criterio-serie-alternada}{criterio
+  de la serie alternada}, como \(n^2 e^{-n}\) es monótona decreciente
+  para \(n\geq 2\) y
+
+  \[
+   \lim_{n\to\infty} n^2 e^{-x} 
+   = \lim_{n\to\infty} \frac{n^2}{e^x} 
+   = \lim_{n\to\infty} \frac{2n}{e^x} 
+   = \lim_{n\to\infty} \frac{2}{e^x}
+   = 0, \tag{L'Hôpital}
+   \]
+
+  se concluye que la serie \(\sum \cos(n\pi)n^2e^{-n}\) converge.
+\end{enumerate}
+
+\end{tcolorbox}
+
+\leavevmode\vadjust pre{\hypertarget{exr-2}{}}%
+\begin{exercise}[]\label{exr-2}
+
+Un pozo de petróleo produce 200 mil litros de petróleo el primer año de
+su explotación, pero cada año que pasa la producción decae un 12\%.
+Calcular la cantidad de petróleo extraída tras \(n\) años de actividad.
+¿Qué cantidad total de petróleo se extraerá del pozo hasta agotarlo?
+
+\end{exercise}
+
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
+
+La producción anual evoluciona según la sucesión
+
+\begin{align*}
+a_1 &= 200\\
+a_2 &= a_1(1-0.12) = 200\cdot 0.88\\
+a_3 &= a_20.88 = 200\cdot 0.88^2\\
+\vdots\\
+a_n &= 200\cdot 0.88^{n-1}
+\end{align*}
+
+por lo que la producción acumulada viene dada por la serie
+\(\sum 200\cdot 0.88^{n-1}\) que es una serie geométrica de razón
+\(0.88\). Así pues, la cantidad de petróleo extraída tras \(n\) años es
+
+\[
+A_n = \sum_{i=0}^{n-1} 200\cdot 0.88^i = 200 \frac{1-0.88^n}{1-0.88},
+\]
+
+y la cantidad total de petróleo que se extraerá del pozo hasta agotarlo
+viene dada por la suma
+
+\[
+\sum_{n=0}^\infty 200\cdot 0.88^n = \frac{200}{1-0.88} \approx 1666.6667 \mbox{ mil litros}.
+\]
+
+\end{tcolorbox}
+
+\leavevmode\vadjust pre{\hypertarget{exr-3}{}}%
+\begin{exercise}[]\label{exr-3}
+
+Determinar el dominio de convergencia puntual de la serie de potencias
+
+\[
+\sum \frac{n(x-3)^n}{(n+1)4^n}
+\]
+
+\end{exercise}
+
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
+
+Para determinar el radio de convergencia de la serie de potencias
+podemos usar el
+\href{https://aprendeconalf.es/analisis-manual/08-series.html\#thm-radio-convergencia-raiz}{criterio
+de la raíz}, que establece que
+
+\[
+R = \frac{1}{\lim_{n\to\infty} \sqrt[n]{|c_n|}}
+\]
+
+Como
+
+\begin{align*}
+\lim_{n\to\infty} \sqrt[n]{|c_n|} = \lim_{n\to\infty} \sqrt[n]{\frac{n}{(n+1)4^n}} = \lim_{n\to\infty} \frac{1}{4} \sqrt[n]{\frac{n}{(n+1)}} = \frac{1}{4},
+\end{align*}
+
+se concluye que \(R = \frac{1}{1/4} = 4\), de manera que la serie
+converge para \(|x-3|<4\), es decir, en el intervalo \((-1,7)\).
+
+Veamos ahora si la serie converge en los extremos del intervalo.
+
+En \(x=7\) se tiene la serie
+\(\sum \frac{n4^n}{(n+1)4^n} = \sum \frac{n}{n+1}\), que diverge al ser
+\(\lim_{n\to\infty} \frac{n}{n+1} = 1 \neq 0\).
+
+Y en \(x=-1\) se tiene la serie
+\(\sum \frac{n(-4)^n}{(n+1)4^n} = \sum (-1)^n\frac{n}{n+1}\), que es una
+serie alternada, pero también diverge al ser
+\(\left(\frac{n}{n+1}\right)_{n=1}^\infty\) una sucesión monótona
+creciente.
+
+Por tanto, el dominio de convergencia puntual de la serie de potencias
+es \(\mathcal{C}=(-1,7)\).
+
+\end{tcolorbox}
+
+\leavevmode\vadjust pre{\hypertarget{exr-4}{}}%
+\begin{exercise}[]\label{exr-4}
+
+Calcular la serie de Taylor de la función \(f(x)=\frac{1}{x}\) en
+\(a=1\). ¿Cuál es su dominio de convergencia puntual?
+
+\end{exercise}
+
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
+
+Calculamos las primeras derivadas para obtener la expresión de la
+derivada de orden \(n\).
+
+\begin{align*}
+f(x) &= \frac{1}{x} = x^{-1} & f(1) &= 1^{-1} = 1,\\
+f'(x) &= (-1)x^{-2} & f'(1) &= (-1)1^{-2} = -1,\\
+f''(x) &= 2x^{-3} & f''(1) &= 2\cdot 1^{-3} = 2,\\
+f'''(x) &= (-1)3!x^{-4} & f'''(1) &= (-1)3! 1^{-4} = -3!,\\
+\vdots
+f^{(n)}(x) &= (-1)^{n+1}n!x^{-(n+1)} & f^{(n)}(1) &= (-1)^{n+1}n!
+\end{align*}
+
+Así pues, sustituyendo en la
+\href{https://aprendeconalf.es/analisis-manual/08-series.html\#def-serie-taylor}{fórmula
+de la serie de Taylor} se obtiene la serie
+
+\[
+\sum \frac{f^{n}(1)}{n!}(x-1)^n = \sum \frac{(-1)^{n+1}n!}{n!}(x-1)^n = \sum (-1)^{n+1}(x-1)^n.
+\]
+
+Su radio de convergencia puntual se obtiene fácilmente mediante el
+criterio de la razón
+
+\[
+R = \lim_{n\to\infty} \left|\frac{c_n}{c_{n+1}}\right| = \lim_{n\to\infty} \left|\frac{(-1)^{n+1}}{(-1)^{n+2}}\right| = 1,
+\]
+
+por lo que la serie converge en \(|x-1|<1\), es decir, en el intervalo
+\((0,2)\). Veamos ahora si converge en los extremos.
+
+En \(x=0\) se tiene la serie
+\(\sum (-1)^{n+1}(-1)^n = \sum (-1)^{2n+1} = \sum -1\) que diverge,
+mientras que en \(x=2\) se tiene la serie
+\(\sum (-1)^{n+1}1^n = \sum (-1)^{n+1}\) que también diverge ya que no
+existe el límite \(\lim_{n\to\infty} (-1)^{n+1}\).
+
+Así pues, se concluye que el dominio de convergencia puntual de la serie
+de Taylor es \(\mathcal{C}=(0,2)\).
+
+\end{tcolorbox}
+
+\leavevmode\vadjust pre{\hypertarget{exr-5}{}}%
+\begin{exercise}[]\label{exr-5}
+
+Calcular la integral superior de Riemann de la función \(f(x)=2x^3+3x\)
+en el intervalo \([0,2]\).
+
+\end{exercise}
+
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, arc=.35mm, titlerule=0mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-tip-color!10!white, bottomtitle=1mm, breakable, colback=white, opacitybacktitle=0.6, coltitle=black, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, bottomrule=.15mm, colframe=quarto-callout-tip-color-frame, leftrule=.75mm]
+
+Si dividimos el intervalo \([0,2]\) en \(n\) subintervalos de igual
+amplitud, obtenemos la partición \(P_n=\{x_0=0,x_1,\ldots,x_n=2\}\) con
+\(x_i=\frac{2i}{n}\) para \(i=1,\ldots,n\).
+
+Como la función \(f(x)=2x^3+3x\) es creciente en el intervalo \([0,2]\)
+el máximo de \(f\) en cada subintervalo \((x_{i-1},x_i)\) se alcanzará
+en el extremo superior, de manera que la suma superior de Riemann de
+\(f\) respecto de \(P_n\) es
+
+\begin{align*}
+S(f,P_n) 
+&= \sum_{i=1}^n f(x_i)(x_i-x_{i-1}) 
+=  \sum_{i=1}^n \left(2\left(\frac{2i}{n}\right)^3 + 3\frac{2i}{n}\right) \frac{2}{n} \\
+&= \sum_{i=1}^n \left(\frac{16i^3}{n^3} + \frac{6i}{n}\right) \frac{2}{n} 
+= \frac{32}{n^4}\sum_{i=1}^n i^3 + \frac{12}{n^2} \sum_{i=1}^n i \\
+&= \frac{32}{n^4}\left(\frac{n(n+1)}{2}\right)^2 + \frac{12}{n^2} \frac{n(n+1)}{2} =  \frac{32}{n^4}\frac{n^4+2n^3+n^2}{4} + 6 \frac{n+1}{n} \\
+&= 8\frac{n^4+2n^3+n^2}{n^4} + 6 \frac{n+1}{n}.
+\end{align*}
+
+Así pues, la integral superior de Riemann es
+
+\begin{align*}
+\overline{\int_0^2}f 
+&= \lim_{n\to\infty} S(f,P_n) 
+= \lim_{n\to\infty} 8\frac{n^4+2n^3+n^2}{n^4} + 6 \frac{n+1}{n} \\
+&= 8 \lim_{n\to\infty} \frac{n^4+2n^3+n^2}{n^4} + 6 \lim_{n\to\infty}\frac{n+1}{n} 
+= 8 + 6 = 14.
+\end{align*}
 
 \end{tcolorbox}
 
