--- a/img/examen-2024-04-16/region-solido-revolucion-int-10-gen.tex
+++ b/img/examen-2024-04-16/region-solido-revolucion-int-10-gen.tex
@@ -18,6 +18,6 @@
     \addplot[thick, mygreen] {1};
     \node at (axis cs:4, 4.5) [myblue] {$x = (y-2)^2$};  % Label for curve A
     \node at (axis cs:6, 2.5) [myred] {$y = \frac{x+1}{2}$};  % Label for curve B
-    \node at (axis cs:8.5, 1.2) [mygreen] {$x = 1$};  % Label for curve B
+    \node at (axis cs:8.5, 1.2) [mygreen] {$y = 1$};  % Label for curve B
     \end{axis}
     \end{tikzpicture}
