--- a/img/tikz/figura.tex
+++ b/img/tikz/figura.tex
@@ -45,32 +45,30 @@
 
 \tikzset{export as png}
 
-\tikzsetnextfilename{interseccion-circulos-int-11-gen}
+\tikzsetnextfilename{region-solido-revolucion-int-10-gen}
 
 % Author: Alfredo Sánchez Alberca (asalber@ceu.es)
 \begin{tikzpicture}
-  \begin{polaraxis}[
-        samples=360, % How many samples to take
-        grid=major, % Display both major and minor grids
-        %ymax=2.5, % Adjust the maximum r value to accommodate your curves
-        xtick={0, 90, 180, 270}, % Positions of the ticks in degrees
-        xticklabels={$0$, $\pi/2$, $\pi$, $3\pi/2$}, % Custom labels for each tick
-        yticklabel style={anchor=north east}, % Adjust label style if necessary
-        clip=false, % Prevent clipping of labels
-        tick label style={font=\small}, % Adjust font size if necessary
-        major grid style={mygray}, % Style for major grids
+    \begin{axis}[
+        xlabel={$x$},
+        ylabel={$y$},
+        xmin=0, xmax=10,
+        ymin=0, ymax=6,
+        grid=both,
+        axis lines=middle,
+        minor tick num=1,
+        legend pos=outer north east,
+        domain= 0:10,
         myblack
-      ]
-  \addplot[name path=A, domain=26.565:90, samples=100, smooth, thick, myblue] {cos(x)};
-  \addplot[name path=B, domain=0:26.565, samples=100, smooth, thick, myred] {2*sin(x)};
-  \draw[name path=C] (0,0) -- (26.565,0.8944);
-  \addplot[fill=myblue, opacity=0.3] fill between [of=A and C];  
-  \addplot[domain=0:360, samples=200, smooth, thick, myblue] {cos(x)};
-  \addplot[fill=myred, opacity=0.3] fill between [of=B and C];  
-  \addplot[domain=0:360, samples=200, smooth, thick, myred] {2*sin(x)};
-  \node[color=myred] at (axis cs:90,1) {$g(\theta) = 2\operatorname{sen}(\theta)$};
-  \node[color=myblue] at (axis cs:-45,1) {$f(\theta) = \cos(\theta)$};
-  \end{polaraxis}
-  \end{tikzpicture}
+        ]
+    \addplot[name path=A, domain=1:5, samples=100, smooth, thick, myblue] ({(x-2)^2}, {x});
+    \addplot[name path=B, domain=1:9, smooth, samples = 2, thick, myred] {0.5*x + 0.5};
+    \addplot[fill=myblue, opacity=0.3] fill between [of=A and B, soft clip={domain=0:9}];  
+    \addplot[thick, mygreen] {1};
+    \node at (axis cs:4, 4.5) [myblue] {$x = (y-2)^2$};  % Label for curve A
+    \node at (axis cs:6, 2.5) [myred] {$y = \frac{x+1}{2}$};  % Label for curve B
+    \node at (axis cs:8.5, 1.2) [mygreen] {$y = 1$};  % Label for curve B
+    \end{axis}
+    \end{tikzpicture}
 
 \end{document}
